crates/jni/tests/ui/bind_java_type/fail/method_raw_fn.stderr
error: Only native methods can have 'fn'
  --> tests/ui/bind_java_type/fail/method_raw_fn.rs:15:12
   |
15 |         fn test_method {
   |            ^^^^^^^^^^^

error[E0425]: cannot find type `TestClass` in this scope
 --> tests/ui/bind_java_type/fail/method_raw_fn.rs:7:72
  |
7 | extern "system" fn raw_method<'local>(_env: EnvUnowned<'local>, _this: TestClass<'local>) -> jint {
  |                                                                        ^^^^^^^^^ not found in this scope
